--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Live Chat webapp</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <title>Homepage</title>
   </head>
   <body>
     <div class="container">
@@ -340,6 +340,6 @@
         </svg>
       </a>
     </div>
-    <script src="bundle.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
